# MugShot2_detect

./: LICENSE.txt  README.rst  requirements.txt  setup.cfg  setup.py
mugshot_detect/: __init__.py  __main__.py  mugshot_detect.py
src/mugshot_detect/: config.json  mugshot_detect.py
