[metadata]
name = mugshot_detect
version = 0.9.0
author = Robert Nelson
author_email = robert-github@nelson.house
description = Detects faces in photos stored in PiWiGo. Adds them to the database as MugShot faces.
long_description = file: README.rst, CHANGELOG.rst, LICENSE.rst
keywords = piwigo, MugShot, facial detection
license = BSD 3-Clause License
classifiers =
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8

[options]
zip_safe = False
include_package_data = True
packages = find:
scripts =
install_requires =
    requests
    importlib; python_version == "2.6"

[options.package_data]
* = *.txt, *.rst, config.json

[options.entry_points]
console_scripts =
    executable-name = package.module:function

[options.extras_require]
#pdf = ReportLab>=1.2; RXP
#rest = docutils>=0.3; pack ==1.1, ==1.3

[options.packages.find]

