[metadata]
name = mugshot_detect
version = 0.9.0
author = Robert Nelson
author_email = robert-github@nelson.house
description = Detects faces in photos stored in PiWiGo. Adds them to the database as MugShot faces.
long_description = file: README.rst, CHANGELOG.rst, LICENSE.rst
keywords = piwigo, MugShot, facial detection
license = BSD 3-Clause License
classifiers =
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
url = https://github.com/Robert-Nelson/mugshot_detect.git
platform = any

[options]
zip_safe = False
include_package_data = True
packages = find:

install_requires =
    numpy~=1.22.1
    opencv-python~=4.5.5.62
    mariadb~=1.0.9
    deepface~=0.0.72
    #python_version == "3.8"

[options.package_data]
* = *.txt, *.rst, config.json

[options.entry_points]
console_scripts =
    mugshot-detect = mugshot_detect.mugshot_detect:main
